# game-of-life

./: README.md  game.py  main.py  pyproject.toml
